# cube

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
docs/: roadmap.md  spec.md
scripts/: install.ps1  run.ps1
shaders/: triangle.vert
src/: main.cpp
src/core/: app.cpp  app.hpp  console.cpp  console.hpp  job_system.cpp  job_system.hpp  log.cpp  log.hpp  profile.hpp  tracy_new_delete.cpp
src/math/: math.hpp
src/memory/: allocator.hpp  leak.cpp  leak.hpp  linear_allocator.hpp  pool_allocator.hpp  stack_allocator.hpp
src/render/: frame.cpp  frame.hpp  gpu_memory.cpp  gpu_memory.hpp  gpu_uploader.cpp  gpu_uploader.hpp  imgui_layer.cpp  imgui_layer.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  types.hpp  vk_device.cpp  vk_device.hpp  vk_instance.cpp  vk_instance.hpp
src/voxel/: blocks.cpp  blocks.hpp  chunk.cpp  chunk.hpp  chunk_manager.cpp  chunk_manager.hpp
tests/: job_tests.cpp  math_tests.cpp  memory_tests.cpp  voxel_tests.cpp
